# quant-etl-portfolio

./: .gitignore  README.md  main.py  pyproject.toml  read_data.py  test_key.py
.github/workflows/: daily_etl.yml
data_lake/Year=2015/: data_0.parquet
data_lake/Year=2016/: data_0.parquet
data_lake/Year=2017/: data_0.parquet
data_lake/Year=2018/: data_0.parquet
data_lake/Year=2019/: data_0.parquet
data_lake/Year=2020/: data_0.parquet
data_lake/Year=2021/: data_0.parquet
data_lake/Year=2022/: data_0.parquet
data_lake/Year=2023/: data_0.parquet
data_lake/Year=2024/: data_0.parquet
data_lake/Year=2025/: data_0.parquet
data_lake/Year=2026/: data_0.parquet
tests/: test_pipeline.py
