[project]
name = "quant-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clic>=0.1.3",
    "click>=8.4.1",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pandas-datareader>=0.10.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "setuptools>=82.0.1",
    "tenacity>=9.1.4",
    "yfinance>=1.4.1",
]
